Email id updated

--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
               </a>              
             </div>-->
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="mailto:articulussurgical@gmail.com" class="tm-contact-item-link">
+              <a href="mailto:saurya@articulussurgical.com" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
-                  <span class="mb-0">articulussurgical@gmail.com</span>
+                  <span class="mb-0">saurya@articulussurgical.com</span>
               </a>              
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
