--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <div class="tm-intro-text-container">
                 <h2 class="tm-text-primary mb-4 tm-section-title">Vision</h2>
                 <p class="mb-4 tm-intro-text">
-                  At Articulus Surgical we believe in empowering the surgeons and healcare providers to provide the best level of care possible to their patients. 
+                  At Articulus Surgical we believe in empowering the surgeons and healthcare providers to provide the best level of care possible to their patients. 
                   
-                  <br><br>We also believe that in it's current state, the advantages of Surgical Robotics are limited by cost and marginal clinical benifits. With out system, we aim to marke Surgical Robotics accessible to the next 3 billion people.
+                  <br><br>We also believe that in it's current state, the advantages of Surgical Robotics are limited by cost and marginal clinical benifits. With our system, we aim to marke Surgical Robotics accessible to the next 3 billion people.
               </p>
                 <div class="tm-next">
                   <a href="#work" class="tm-intro-text tm-btn-primary">Read More</a>
