--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
                       </a>
                       </div>
                       <div class="order-md-3">
-                      <a href="img/team-images/Aditya-Sonavane.png">
+                      <a href="img/team-images/Dr-Chand.png">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/team-images/Aditya-Sonavane.png" alt="Image" class="img-fluid">
-                          <h3>Aditya Sonavane</h3>
+                          <img src="img/team-images/Dr-Chand.png" alt="Image" class="img-fluid">
+                          <h3>Dr. Ashis Chand</h3>
                         </figure>
                       </a>
                       </div>
