--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                       </a>
                       </div>
                       <div class="order-md-4">
-                      <a href="img/team-images/Srajan-Kumar.png">
+                      <a href="img/team-images/Raunak.png">
                         <figure class="effect-honey tm-gallery-item">
-                          <img src="img/team-images/Srajan-Kumar.png" alt="Image" class="img-fluid">
-                          <h3>Srajan Kumar</h3>
+                          <img src="img/team-images/Raunak.png" alt="Image" class="img-fluid">
+                          <h3>Dr. Raunak Raj</h3>
                         </figure>
                       </a>
                       </div>
