--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                       <a href="img/team-images/Raunak.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="img/team-images/Raunak.png" alt="Image" class="img-fluid">
-                          <h3>Dr Raunak Raj</h3>
+                          <h3>Dr. Raunak Raj</h3>
                         </figure>
                       </a>
                       </div>
