--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section id="Team" class="">
         <div class="row">
           <div class="text-center col-12">
-            <h2 class="tm-text-primary tm-section-title mb-2">Our Team</h2> 
+            <h2 class="tm-text-primary tm-section-title mb-2">Team and Advisors</h2> 
             </div>
             </div>
             <div class="container">
