Added new video to home page

--- a/about-us.html
+++ b/about-us.html
@@ -76,18 +76,11 @@
             <div class="team">
                 <div class="row-1">
                     <div class="member team-member">
-                        <img src="./assets/images/shaurya.jpg" alt="shaurya">
+                        <img src="./assets/images/Saurya.jpeg" alt="Saurya">
                         <div class="member-info">
                             <h3>Saurya Mishra</h3>
                             <p>Founder & CEO</p>
                         </div>      
-                    </div>
-                    <div class="member team-member">
-                        <img src="./assets/images/raunak.png" alt="raunak">
-                        <div class="member-info">
-                            <h3>Dr Raunak Raj</h3>
-                            <p>Chief Medical Officer</p>
-                        </div> 
                     </div>
                 </div>  
                 <div class="row-2">
