--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </div>
         </nav>
         <div class="section-1">
-            <img src="./assets/images/home-bg.jpg" alt="">
+            <!-- <img src="./assets/images/home-bg.jpg" alt=""> -->
+            <video src="./assets/videos/home-bg.mp4" autoplay muted loop></video>
             <div class="bg-overlay"></div>
             <div class="overlay">
                 <h1>Building</h1>
@@ -126,18 +127,11 @@
                 <div class="left-chevron"><i class="fas fa-chevron-left"></i></div>
                 <div class="team">             
                     <div class="member">
-                        <img src="./assets/images/shaurya.jpg" alt="shaurya">
+                        <img src="./assets/images/Saurya.jpeg" alt="shaurya">
                         <div class="member-info">
                             <h3>Saurya Mishra</h3>
                             <p>Founder & CEO</p>
                         </div>      
-                    </div>
-                    <div class="member">
-                        <img src="./assets/images/raunak.png" alt="raunak">
-                        <div class="member-info">
-                            <h3>Dr Raunak Raj</h3>
-                            <p>Chief Medical Officer</p>
-                        </div> 
                     </div>
                     <div class="member">
                         <img src="./assets/images/pranay.jpg" alt="pranay">
