--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <img src="./assets/images/sahas.png" alt="sahas">
                         <div class="member-info">
                             <h3>Sahas A</h3>
-                            <p>Embedded Designer</p>
+                            <p>Robotics Software Engineer</p>
                         </div> 
                     </div>                   
                 </div>
