--- a/about-us.html
+++ b/about-us.html
@@ -118,7 +118,7 @@
                         <img src="./assets/images/sahas.png" alt="sahas">
                         <div class="member-info">
                             <h3>Sahas A</h3>
-                            <p>Embedded Designer</p>
+                            <p>Robotic Software Engineer</p>
                         </div> 
                     </div>
                 </div>  
